# mlops-course

./: .gitignore  main.py  pyproject.toml
src/data/: load_data.py
src/demo/: demo.py
src/models/: train.py
src/utils/: config.py
